All fixed up. Next up: "glow" cursor (instead of cone)

--- a/src/com/megatron/application/i18n/messages.properties
+++ b/src/com/megatron/application/i18n/messages.properties
@@ -1,2 +1,4 @@
 com.megatron.application.tools.LocalElevationTool.toolName=Raise / Lower Terrain
 com.megatron.application.tools.LocalElevationTool.toolTip=Click to Raise, alt-Click to Lower terrain. Scroll Wheel to change Radius, alt-Scroll to change Power.
+com.megatron.application.tools.LocalSmoothTool.toolName=Smooth Terrain
+com.megatron.application.tools.LocalSmoothTool.toolTip=Click to smooth terrain. Smooth like Barry White. Scroll Wheel to change Radius, alt-Scroll to change Power.
