Added "Blob" cursor, fixed Skybox, Replaced "grass" texture, started on Manual PopDensity tools PoC.

--- a/src/com/skyline/application/i18n/messages.properties
+++ b/src/com/skyline/application/i18n/messages.properties
@@ -8,3 +8,6 @@ com.skyline.application.tools.terrain.GlobalZeroTool.toolName=(Global) Clear Ter
 com.skyline.application.tools.terrain.GlobalZeroTool.toolTip=Start Fresh, with a completely flat landscape.
 com.skyline.application.tools.terrain.GlobalFlattenTool.toolName=(Global) Flatten Terrain
 com.skyline.application.tools.terrain.GlobalFlattenTool.toolTip=Flatten the terrain a bit...
+
+com.skyline.application.tools.population.LocalPopDensityTool.toolName=Population Density
+com.skyline.application.tools.population.LocalPopDensityTool.toolTip=Click to set Population Density. Scroll Wheel to change Radius, alt-Scroll to change Power.
